# claude-skills

./: .gitignore  CONTRIBUTING.md  README.md  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  skill-idea.yml
.github/workflows/: validate.yml
docs/: _config.yml  creating-a-skill.md  index.md
skills/loom/: CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  Makefile  README.md  ROADMAP.md  SECURITY.md  SKILL.md  pyproject.toml
skills/loom/.github-pypi/: publish.yml
skills/loom/adrs/: 000-why-loom-exists.md  001-mcp-native-gateway.md  002-sqlite-for-memory.md  003-python-for-v0x.md  template.md
skills/loom/deploy/docker/: Dockerfile  docker-compose.yaml
skills/loom/docs/: architecture-diagrams.md  architecture.md  connect-claude-code.md  connect-claude-desktop.md  connect-cursor.md  connect-windsurf.md  contributing-code.md  features.md  function-catalog.md  gateway-model.md  getting-started.md  mcp-tool-reference.md  memory-model.md  product-charter.md  product-evolution.md  project-bible-v3.docx  project-bible-v3.md  release-policy.md  risks-and-antipatterns.md  runtime-model.md  security-model.md  setup-cloud.md  setup-local.md  testing-strategy.md
skills/loom/examples/python-project/: README.md  pyproject.toml
skills/loom/examples/python-project/.loom/: events.jsonl  memory.db  runtime.json
skills/loom/rfcs/: template.md
skills/loom/schemas/: event.schema.json  memory-entry.schema.json  policy.schema.json
skills/loom/src/loom/: __init__.py  __main__.py  benchmark.py  cli.py  constants.py  docker.py  events.py  gateway.py  import_export.py  mcp_server.py  memory.py  models.py  policy.py  recovery.py  runtime.py  sessions.py  state.py  team.py  templates.py  workspace_router.py  write_token.py
skills/loom/src/loom/migrations/: 001_initial.sql  __init__.py
skills/loom/templates/devcontainer/: devcontainer.json
skills/loom/templates/mcp-configs/: claude-code-remote.json  claude-code.json
skills/loom/templates/policies/: default.yaml
skills/loom/tests/e2e/: test_full_verification.py
skills/loom/tests/integration/: test_cli_e2e.py  test_cross_model_handoff.py  test_full_e2e.py  test_v04_features.py
skills/loom/tests/unit/: test_events.py  test_fts_edge_cases.py  test_gateway.py  test_import_export.py  test_mcp_handlers.py  test_memory.py  test_models.py  test_phase3.py  test_runtime.py  test_sessions.py  test_state.py  test_team_and_router.py  test_write_token.py
skills/pisa/: CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  SKILL.md
skills/pisa/docs/: README.md  architecture.md  gallery.md  getting-started.md  personas.md  quality.md  registry-setup.md  schema-v2.1.md  showcase.md  taxonomy.md  tier2-setup.md  workflows.md
skills/pisa/references/: pisa-catalog-system.md  pisa-github-setup.md  pisa-package-format.md  pisa-personas.md  pisa-schema-v2.1.md  pisa-versioning-diff.md
skills/pisa/registry/: registry.json
skills/pisa/registry/packs/: corporate-essentials.json  finance-reporting.json  startup-pitch.json  strategy-consulting.json
skills/pisa/registry/personas/: academic.json  executive.json  keynote.json  sales.json  startup.json  strategy.json  technical.json  workshop.json
skills/pisa/registry/styles/: bold.json  gradient.json  minimal.json  photo.json  split.json
skills/pisa/registry/themes/: corporate_dark.json  corporate_light.json  finance_dark.json
skills/pisa/scripts/: bootstrap.sh
skills/pisa/services/extraction/: extract_engine.py
skills/pisa/services/generator/: generate.js
skills/pisa/services/qa/: programmatic_qa.py
skills/pisa/services/svg/: canvas_to_svg.py  primitive_to_svg.py  template_to_svg.py
skills/pisa/subskills/slide_to_primitive/: SKILL.md  extract_engine.py
