[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loom"
version = "0.3.0"
description = "Weave context across AI tools — persistent, inspectable, transferable workspaces"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "NeimadLab" }]
keywords = ["ai", "mcp", "workspace", "agent", "persistence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "mcp>=1.0",
]

[project.scripts]
loom = "loom.cli:main"

[project.optional-dependencies]
gateway = [
    "starlette>=0.40",
    "sse-starlette>=2.0",
    "uvicorn>=0.30",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "starlette>=0.40",
    "sse-starlette>=2.0",
    "uvicorn>=0.30",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/loom"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]
ignore = ["TC002", "TC003"]  # false positive for runtime/lazy imports

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
